# studio

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  FortMyrmidonConfig.cmake.in  README.md  ROADMAP.md  TROUBLESHOOTING.md  index.md
bindings/python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py  version.py
bindings/python/src/: Ant.cpp  BindMethods.hpp  CMakeLists.txt  Color.cpp  Experiment.cpp  Identification.cpp  Matchers.cpp  Query.cpp  Shapes.cpp  Space.cpp  Time.cpp  Types.cpp  Zone.cpp  main.cpp
bindings/python/tests/: test_ant_static_value.py  test_color.py  test_shapes.py  test_time.py  test_types.py  tests
conda/hello-world-myrmidon/: CMakeLists.txt  main.cpp
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  index.rst  latest  search.json
docs/api/: .gitignore  ant.rst  experiment.rst  identification.rst  index.rst  myrmidon.rst  search.json  shapes.rst  time.rst  typedef.rst
docs/api/xml/: fort.myrmidon.Ant.xml  fort.myrmidon.Experiment.xml  fort.myrmidon.priv.Experiment.xml  fort.myrmidon.xml  fort.xml  index.xml  report.xml
docs/cldoc/api/: ant_identification.md  ant_interaction.md  fort.md  index.md  manual_measurement.md  myrmidon.md  named_values.md  priv.md  queries.md
docs/cldoc/private/: pb.md  priv.md
docs/dev/api/: index.html  search.json
docs/private/: search.json
docs/private/xml/: IdentificationUTest.xml  NotYetImplemented.xml  fort.myrmidon.pb.AntMetadata.xml  fort.myrmidon.pb.Experiment.xml  fort.myrmidon.pb.FramePointer.xml  fort.myrmidon.pb.Identification.xml  fort.myrmidon.pb.TrackingDataDirectory.xml  fort.myrmidon.pb.xml  fort.myrmidon.priv.Ant.Accessor.xml  fort.myrmidon.priv.Ant.xml  fort.myrmidon.priv.DeletedReference.xml  fort.myrmidon.priv.Experiment.xml  fort.myrmidon.priv.ExperimentReadWriter.xml  fort.myrmidon.priv.FramePointer.xml  fort.myrmidon.priv.Identification.Accessor.xml  fort.myrmidon.priv.Identification.xml  fort.myrmidon.priv.Identifier.Accessor.xml  fort.myrmidon.priv.Identifier.AlreadyExistingAnt.xml  fort.myrmidon.priv.Identifier.UnmanagedAnt.xml  fort.myrmidon.priv.Identifier.UnmanagedIdentification.xml  fort.myrmidon.priv.Identifier.UnmanagedTag.xml  fort.myrmidon.priv.Identifier.xml  fort.myrmidon.priv.Isometry2D.xml  fort.myrmidon.priv.OverlappingIdentification.xml  fort.myrmidon.priv.ProtobufReadWriter.xml  fort.myrmidon.priv.TrackingDataDirectory.xml  fort.myrmidon.priv.xml  fort.myrmidon.xml  fort.xml  index.xml  report.xml
docs/system_header_override/: variant
docs/v0.3.0/api/: search.json
docs/v0.4.1/api/: search.json
misc/: CMakeLists.txt  fort-studio.desktop.in
pkgconfig/: CMakeLists.txt  fort-myrmidon.pc.in
src/fort-studio/: AntIdentificationWidget.cpp  AntIdentificationWidget.hpp  AntIdentificationWidget.ui  AntListWidget.cpp  AntListWidget.hpp  AntListWidget.ui  AntPoseEstimate.cpp  AntPoseEstimate.hpp  CMakeLists.txt  ColorComboBox.cpp  Error.cpp  Error.hpp  Estimate.proto  Experiment.cpp  Experiment.hpp  ExperimentBridge.cpp  ExperimentBridge.hpp  ExperimentBridgeUTest.cpp  ExperimentBridgeUTest.hpp  ExperimentController.cpp  ExperimentController.hpp  ExperimentControllerUTest.cpp  ExperimentControllerUTest.hpp  ExperimentEditorWidget.cpp  ExperimentEditorWidget.hpp  ExperimentEditorWidget.ui  ExperimentInfoWidget.cpp  ExperimentInfoWidget.hpp  ExperimentInfoWidget.ui  Format.cpp  Format.hpp  FramePointerWidget.cpp  FramePointerWidget.hpp  FramePointerWidget.ui  GlobalPropertyBridge.cpp  GlobalPropertyBridge.hpp  GlobalPropertyUTest.cpp  GlobalPropertyWidget.cpp  GlobalPropertyWidget.hpp  GlobalPropertyWidget.ui  (+55 more)
src/fort-studio/bridge/: AntShapeTypeBridge.cpp  AntShapeTypeBridge.hpp  Bridge.cpp  Bridge.hpp  ExperimentBridge.cpp  ExperimentBridge.hpp  GlobalPropertyBridge.hpp  IdentifiedFrameConcurrentLoader.cpp  IdentifiedFrameLoader.cpp  IdentifiedFrameLoader.hpp  IdentifierBridge.cpp  IdentifierBridge.hpp  MeasurementBridge.cpp  MeasurementBridge.hpp  SelectedAntBridge.cpp  SelectedAntBridge.hpp  SelectedIdentificationBridge.cpp  SelectedIdentificationBridge.hpp  UniverseBridge.cpp  UniverseBridge.hpp
src/fort-studio/utest/: AntShapeTypeUTest.cpp  AntShapeTypeUTest.hpp  ExperimentBridgeUTest.cpp  GlobalPropertyUTest.cpp  GlobalPropertyUTest.hpp  IdentifierUTest.cpp  IdentifierUTest.hpp  MeasurementUTest.cpp  MeasurementUTest.hpp  UniverseUTest.cpp  main.cpp
src/fort-studio/widget/: AntEditorWidget.cpp  AntEditorWidget.hpp  AntEditorWidget.ui  AntIdentificationWidget.cpp  AntIdentificationWidget.hpp  AntIdentificationWidget.ui  AntListWidget.cpp  AntListWidget.hpp  AntListWidget.ui  AntShapeTypeEditorWidget.cpp  AntShapeTypeEditorWidget.ui  FrameFinderDialog.cpp  FrameFinderDialog.hpp  FrameFinderDialog.ui  GlobalPropertyWidget.cpp  GlobalPropertyWidget.ui  IdentificationEditorWidget.cpp  IdentificationEditorWidget.hpp  IdentificationEditorWidget.ui  LoggerWidget.ui  MainWindow.cpp  MainWindow.ui  MeasurementTypeWidget.cpp  MeasurementTypeWidget.ui  ShappingWidget.cpp  ShappingWidget.hpp  ShappingWidget.ui  SnapshotViewer.hpp  SpaceChoiceDialog.cpp  TaggingWidget.cpp  TaggingWidget.hpp  TaggingWidget.ui  UniverseEditorWidget.cpp  UniverseEditorWidget.ui
src/fort/myrmidon/: Ant.cpp  Ant.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Experiment.cpp  Experiment.hpp  ForwardDeclaration.hpp  Identification.cpp  Identification.hpp  Matchers.cpp  Matchers.hpp  Query.cpp  Query.hpp  Shapes.cpp  Shapes.hpp  Space.cpp  Space.hpp  TestSetup.cpp  TestSetup.hpp  Time.cpp  Time.hpp  TimeUTest.cpp  TrackingSolver.cpp  TrackingSolver.hpp  Types.cpp  Types.hpp  UtilsUTest.cpp  UtilsUTest.hpp  VisualMarker.hpp  Zone.cpp  Zone.hpp  (+1 more)
src/myrmidion/: Ant.hpp  Ant.priv.cpp  Ant.priv.hpp  CMakeLists.txt  Experiment.hpp  Experiment.priv.cpp  Experiment.priv.hpp  Experiment.proto  Frame.hpp  VisualMarker.hpp  config.h.in
src/myrmidon/: Ant.hpp  CMakeLists.txt  Cache.proto  Experiment.hpp  Experiment.proto  Frame.hpp  TestSetup.cpp  TestSetup.hpp  Time.cpp  Time.hpp  TimeUTest.cpp  TimeUTest.hpp  UtilsUTest.cpp  UtilsUTest.hpp  config.h.in  main-check.cpp
(+923 files in other folders)
